--- a/src/App/Components/Statefull/Crawl/index.scss
+++ b/src/App/Components/Statefull/Crawl/index.scss
@@ -5,10 +5,6 @@ body {
   background: #000;
 }
 
-.hidden {
-  display: none;
-}
-
 .star-wars {
   display: flex;
   justify-content: center;
@@ -27,23 +23,21 @@ body {
   position: relative;
   top: 300px;
   transform-origin: 50% 100%;
+  animation: crawl 40s linear;
+  visibility: hidden;
 }
 
 @keyframes crawl {
   0% {
     top: 300;
     transform: rotateX(20deg) translateZ(0);
+    visibility: visible;
   }
+
   100% { 
     top: -6000px;
     transform: rotateX(25deg) translateZ(-2500px);
   }
-}
-
-.crawl {
-  position: relative;
-  transform-origin: 50% 100%;
-  animation: crawl 70s linear;
 }
 
 .fade {
@@ -53,18 +47,4 @@ body {
   top: -25px;
   background-image: linear-gradient(0deg, transparent, black 75%);
   z-index: 1;
-}
-
-.crawl-skip {
-  position: absolute;
-  color: rgba(255, 255, 255, .3);
-  bottom: 0;
-  right: 10px;
-  font-size: 20px;
-  animation: fadein 10s;
-
-  @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: .3; }
-  }
 }
