--- a/src/Components/Stateless/Header/index.scss
+++ b/src/Components/Stateless/Header/index.scss
@@ -1,3 +1,29 @@
-.header-title {
-  color: #fff 
+
+.header {
+  display: flex;
+  flex-wrap: wrap;
 }
+
+.header-title {
+  color: #fff;
+  margin-left: 1rem;
+}
+
+.button-container {
+  border: 1px solid orange;
+  width: 100%;
+}
+
+button {
+  font-size: 1rem;
+  padding: 0 .6rem;
+  height: 3rem;
+  float: left;
+  border-style: none;
+  border-right: 1px solid rgb(255, 165, 0);
+  background-color: transparent;
+  color: white;
+  &:hover { background-color: rgb(228, 148, 0); }
+  &:active { background-color: rgb(255, 81, 1); }
+}
+
