--- a/src/Components/Stateless/FavButton/FavButton.scss
+++ b/src/Components/Stateless/FavButton/FavButton.scss
@@ -17,6 +17,7 @@ p {
 
 .favorite-count {
   display: inline-block;
+  margin-left: 1rem;
   background-color: rgba(255, 255, 255, .5);
   color: #fff;
   padding: .3rem 1rem;
